--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Semana do Zero ao Programador Contratado - Fundo Mágico</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="responsivo.css">
+    <link rel="stylesheet" href="src/CSS/reset.css">
+    <link rel="stylesheet" href="src/CSS/estilos.css">
+    <link rel="stylesheet" href="src/CSS/responsivo.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
 </head>
@@ -44,9 +44,10 @@
             </div>
         </section>
     </main>
-    <script src="/src/js/index.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
 
 
 </html>
+
 
